--- a/index.html
+++ b/index.html
@@ -69,14 +69,15 @@
                     Ekan Soluções e Sistemas Integrados | 08/2022 - Present Day
                 </p>
                 <p>
-                    Development of a solution focused on the health area.
+                    Development of solutions for healthcare and governmen.
                 </p>
                 <ul>
                     <li>.NET C#</li>
-                    <li>Angular</li>
-                    <li>RavenDB</li>
-                    <li>PostgreSQL</li>
+                    <li>JavaScript</li>
+                    <li>MySQL</li>
+                    <li>Ajax</li>
                     <li>Git</li>
+                    <li>JQuery</li>
                 </ul>
             </section>
         </article>
