--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     Ekan Soluções e Sistemas Integrados | 08/2022 - Present Day
                 </p>
                 <p>
-                    Development of solutions for healthcare and governmen.
+                    Development of solutions for healthcare and private organizations.
                 </p>
                 <ul>
                     <li>.NET C#</li>
