--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header id="header">
         <h1>Wilson Rafael S. Nunes (Wilson)</h1>
         <hr>
-        .NET | Angular Developer
+        .NET Developer
         <hr>
     </header>
     <main>
@@ -31,10 +31,15 @@
             </section>
             <section>
                 <h2>SKILLS</h2>
-                <p>.NET C# (advanced), OOP (advanced), ASP.NET (advanced), HTML5 (advanced), EF Core
-                    (advanced), Git (advanced), RavenDB (advanced), Angular (advanced), SQL (intermediate), GitHub
-                    (intermediate), English
-                    (intermediate)</p>
+                <ul>
+                    <li>Problem-Solving: Ability to identify, analyze and propose efficient solutions to complex challenges.</li>
+                    <li>Requirements gathering and specification: Ability to understand user needs and translate them into clear and detailed requirements for systems development.</li>
+                    <li>Technical knowledge: Mastery of programming languages, databases, systems architecture and development methodologies.</li>
+                    <li>Effective communication: Ease of communicating with technical and non-technical teams, ensuring mutual understanding between the parties involved.</li>
+                    <li>Documentation: Ability to produce clear, objective and organized documentation on system processes, requirements and functionalities.</li>
+                    <li>Collaboration: Collaboration with developers, testers, managers, and users to ensure project success.</li>
+                    <li>Constant updating: Interest in learning new technologies, tools and trends.</li>
+                </ul>
             </section>
             <section>
                 <h2>EDUCATION</h2>
@@ -62,22 +67,60 @@
                     <li>RavenDB</li>
                     <li>PostgreSQL</li>
                     <li>Git</li>
+                    <li>Scrum</li>
+                    <li>Azure</li>
                 </ul>
 
                 <h3>Full Stack Developer</h3>
                 <p>
-                    Ekan Soluções e Sistemas Integrados | 08/2022 - Present Day
+                    Ekan Soluções e Sistemas Integrados | 08/2022 - 10/2023
                 </p>
                 <p>
                     Development of solutions for healthcare and private organizations.
                 </p>
                 <ul>
                     <li>.NET C#</li>
-                    <li>JavaScript</li>
+                    <li>Angular</li>
+                    <li>RavenDB</li>
+                    <li>MongoDB</li>
+                    <li>PostgreSQL</li>
                     <li>MySQL</li>
-                    <li>Ajax</li>
+                    <li>JavaScript</li>
                     <li>Git</li>
-                    <li>JQuery</li>
+                    <li>Scrum</li>
+                    <li>Azure</li>
+                    <li>HTML</li>
+                    <li>Bootstrap</li>
+                </ul>
+
+                 <h2><strong>Anls, Back-End Developer</strong></h2>
+                <p>
+                    Avanade | 10/2023 - Present Day
+                </p>
+                <p>
+                    Anls, Back-End Developer, focusing on back-end with .NET, working in several companies and projects in the financial sector, such as SuperDigital, working in OpenFinance and account closure, and Crefisa, working in the contracts and loans sector, focusing on problem analysis and developing efficient and scalable solutions for customers
+                </p>
+                <ul>
+                    <li>.NET C#</li>
+                    <li>SQL</li>
+                    <li>PL/SQL</li>
+                    <li>Sql Server</li>
+                    <li>Oracle SQL</li>
+                    <li>Git</li>
+                    <li>Scrum</li>
+                    <li>Azure</li>
+                    <li>Apache Kafka</li>
+                    <li>APIs Restful</li>
+                    <li>Jira</li>
+                    <li>IBM MQ</li>
+                    <li>RabbitMQ</li>
+                    <li>Kubernetes</li>
+                    <li>Unit Tests</li>
+                    <li>Dapper</li>
+                    <li>Software Architecture</li>
+                    <li>OpenShift</li>
+                    <li>Elastic</li>
+                    <li>TDD</li>
                 </ul>
             </section>
         </article>
