--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
                 <h2>SKILLS</h2>
                 <ul>
                     <li>Problem-Solving: Ability to identify, analyze and propose efficient solutions to complex challenges.</li>
-                    <li>Requirements gathering and specification: Ability to understand user needs and translate them into clear and detailed requirements for systems development.</li>
-                    <li>Technical knowledge: Mastery of programming languages, databases, systems architecture and development methodologies.</li>
-                    <li>Effective communication: Ease of communicating with technical and non-technical teams, ensuring mutual understanding between the parties involved.</li>
+                    <li>Requirements gathering and specification: Ability to understand user needs and translate them into clear and detailed requirements.</li>
+                    <li>Technical knowledge: Mastery of programming languages, databases, architecture and development methodologies.</li>
+                    <li>Effective communication: Good communication with technical and non-technical teams, ensuring mutual understanding between the parties involved.</li>
                     <li>Documentation: Ability to produce clear, objective and organized documentation on system processes, requirements and functionalities.</li>
-                    <li>Collaboration: Collaboration with developers, testers, managers, and users to ensure project success.</li>
+                    <li>Collaboration: Collaboration with testers and managers to ensure project success.</li>
                     <li>Constant updating: Interest in learning new technologies, tools and trends.</li>
+                    <li>.NET C# (advanced), OOP (advanced), ASP.NET (advanced), HTML5 (advanced), EF Core (advanced), Git (advanced), RavenDB (advanced), English(advanced), Angular (intermediate), SQL (intermediate), GitHub(intermediate), MySQL (intermediate)</li>
                 </ul>
             </section>
             <section>
