--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li>Requirements gathering and specification: Ability to understand user needs and translate them into clear and detailed requirements.</li>
                     <li>Effective communication: Good communication with technical and non-technical teams, ensuring mutual understanding between the parties involved.</li>
                     <li>Documentation: Ability to produce clear, objective and organized documentation on system processes, requirements and functionalities.</li>
-                    <li>Collaboration: Collaboration with testers and managers to ensure project success.</li>
+                    <li>Collaboration: Collaboration with testers, QAs and managers to ensure project success.</li>
                     <li>Constant updating: Interest in learning new technologies, tools and trends.</li>
                     <li>.NET C# (advanced), OOP (advanced), ASP.NET (advanced), HTML5 (advanced), EF Core (advanced), Git (advanced), RavenDB (advanced), English(advanced), Angular (intermediate), SQL (intermediate), GitHub(intermediate), MySQL (intermediate)</li>
                 </ul>
